cmss/main/default/objects/PortfolioManagementRequest__c/PortfolioManagementRequest__c.object-meta.xml
<CustomObject>
    <description>Request objekt pro Spravu Stavu.</description>
    <label>Portfolio Management Request</label>
    <nameField>
        <displayFormat>PMR-{0000000000}</displayFormat>
        <label>Portfolio Management Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Management Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>