cmss/main/default/objects/PortfolioManagementRequest__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <formula>Account__r.Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias</label>
    <type>Text</type>
</CustomField>