cmss/main/default/objects/PortfolioManagementRequest__c/fields/BatchID__c.field-meta.xml
<CustomField>
    <fullName>BatchID__c</fullName>
    <description>Unikatni Batch ID manualniho importu csv souboru.</description>
    <label>Batch ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>