cmss/main/default/objects/PortfolioManagementRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nadřazená žádost</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Portfolio Management Requests</relationshipLabel>
    <relationshipName>PortfolioManagementRequests</relationshipName>
    <type>Lookup</type>
</CustomField>