cmss/main/default/objects/PortfolioManagementRequest__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <formula>Case__r.CaseID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>