cmss/main/default/objects/PortfolioManagementRequest__c/fields/CaseChangeReason__c.field-meta.xml
<CustomField>
    <fullName>CaseChangeReason__c</fullName>
    <description>Přebírá důvod změny SPS z nadřazené žádosti</description>
    <formula>TEXT(Case__r.ChangeReason__c)</formula>
    <label>Case Change Reason</label>
    <type>Text</type>
</CustomField>