cmss/main/default/objects/PortfolioManagementRequest__c/fields/CaseCreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CaseCreatedByName__c</fullName>
    <description>Informace o zadavateli z nadřazené žádosti</description>
    <formula>Case__r.CreatedBy.CombinedName__c</formula>
    <label>Case Created By Name</label>
    <type>Text</type>
</CustomField>