cmss/main/default/objects/PortfolioManagementRequest__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Chybová hláška</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>