cmss/main/default/objects/PortfolioManagementRequest__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Pouze pro historické záznamy, již se nepoužívá.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Pouze pro historické záznamy, již se nepoužívá.</inlineHelpText>
    <label>External Id</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>