cmss/main/default/objects/PortfolioManagementRequest__c/fields/OriginalPortfolioManagerA__c.field-meta.xml
<CustomField>
    <fullName>OriginalPortfolioManagerA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Původní správce stavu</description>
    <label>Original Portfolio Manager A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OriginalPortfolioManagerAPMR</relationshipName>
    <type>Lookup</type>
</CustomField>