cmss/main/default/objects/PortfolioManagementRequest__c/fields/PersonalIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonalIdentificationNumber__c</fullName>
    <formula>Account__r.PersonalIdentificationNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Identification Number</label>
    <type>Text</type>
</CustomField>