cmss/main/default/objects/PortfolioManagementRequest__c/fields/PMTCaseCreatedByName__c.field-meta.xml
<CustomField>
    <fullName>PMTCaseCreatedByName__c</fullName>
    <description>Informace o zadavateli z nadřazené žádosti</description>
    <formula>Case__r.CreatedBy.CombinedName__c</formula>
    <label>PMT Case Created By Name</label>
    <type>Text</type>
</CustomField>