cmss/main/default/objects/PortfolioManagementRequest__c/fields/PortfolioManager__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Požadovaný správce stavu</description>
    <label>Portfolio Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Zadejte aktivního obchodního zástupce.</errorMessage>
        <filterItems>
            <field>User.IsAgentActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PortfolioManagementRequests</relationshipName>
    <type>Lookup</type>
</CustomField>