cmss/main/default/objects/PortfolioManagementRequest__c/fields/PortfolioManagerCPU__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManagerCPU__c</fullName>
    <description>Portfolio Manager ČPÚ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Portfolio Manager CPU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>