cmss/main/default/objects/PortfolioManagementRequest__c/fields/PortfolioManChangeReason__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManChangeReason__c</fullName>
    <description>Důvod změny správy stavu</description>
    <label>Portfolio Management Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>