cmss/main/default/objects/PortfolioManagementRequest__c/fields/PortfolioManChangeResult__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManChangeResult__c</fullName>
    <description>Výsledek změny správy stavu</description>
    <label>Portfolio Management Change Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>900</fullName>
            </value>
            <value>
                <fullName>901</fullName>
            </value>
            <value>
                <fullName>902</fullName>
            </value>
            <value>
                <fullName>903</fullName>
            </value>
            <value>
                <fullName>904</fullName>
            </value>
            <value>
                <fullName>905</fullName>
            </value>
            <value>
                <fullName>906</fullName>
            </value>
            <value>
                <fullName>907</fullName>
            </value>
            <value>
                <fullName>908</fullName>
            </value>
            <value>
                <fullName>909</fullName>
            </value>
            <value>
                <fullName>910</fullName>
            </value>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>912</fullName>
            </value>
            <value>
                <fullName>914</fullName>
            </value>
            <value>
                <fullName>915</fullName>
            </value>
            <value>
                <fullName>916</fullName>
            </value>
            <value>
                <fullName>917</fullName>
            </value>
            <value>
                <fullName>918</fullName>
            </value>
            <value>
                <fullName>919</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>