cmss/main/default/objects/PortfolioManagementRequest__c/fields/PortfolioMngmtA__c.field-meta.xml
<CustomField>
    <fullName>PortfolioMngmtA__c</fullName>
    <formula>Account__r.PortfolioMngmtA__c + &apos;,&apos; + Account__r.PortfolioMngmtA__r.FirstName + &apos; &apos; + Account__r.PortfolioMngmtA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Management A</label>
    <type>Text</type>
</CustomField>