cmss/main/default/objects/PortfolioManagementRequest__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <description>Kombinace Case + Account pro zachování unikátnosti</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UniqueId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>