cmss/main/default/objects/PortfolioManagementRequest__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Platnost od</description>
    <label>Valid From</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>