cmss/main/default/objects/PortfolioManagementRequest__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZIP</label>
    <type>Text</type>
</CustomField>