cmss/main/default/objects/PortfolioManagementRequest__c/validationRules/CannotChangeCase.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeCase</fullName>
    <active>true</active>
    <description>Once created, field Case cannot be modified.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; 
ISCHANGED(Case__c)</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>This field cannot be edited.</errorMessage>
</ValidationRule>