cmss/main/default/objects/PortfolioManagementRequest__c/validationRules/HasCase.validationRule-meta.xml
<ValidationRule>
    <fullName>HasCase</fullName>
    <active>true</active>
    <description>For newly created Portfolio Management Request, field Case must be filled.</description>
    <errorConditionFormula>ISNEW() &amp;&amp;
ISBLANK(Case__c)</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>Case is required field.</errorMessage>
</ValidationRule>