cmss/main/default/objects/PortfolioManagementRequest__c/validationRules/HasPortfolioManagementType.validationRule-meta.xml
<ValidationRule>
    <fullName>HasPortfolioManagementType</fullName>
    <active>true</active>
    <description>For newly created Portfolio Management Request, field Portfolio Management Type must be filled.</description>
    <errorConditionFormula>NOT(ISBLANK(Case__c)) &amp;&amp; 
ISBLANK(TEXT(PortfolioManagementType__c)) &amp;&amp; 
ISBLANK(TEXT(Case__r.PortfolioManagementType__c))</errorConditionFormula>
    <errorDisplayField>PortfolioManagementType__c</errorDisplayField>
    <errorMessage>Portfolio Management Type is required field.</errorMessage>
</ValidationRule>