cmss/main/default/objects/PortfolioManagementRequest__c/validationRules/NewPortfolioManagerRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NewPortfolioManagerRequired</fullName>
    <active>true</active>
    <errorConditionFormula>PortfolioManagerCPU__c == null &amp;&amp; 
PortfolioManager__c == null</errorConditionFormula>
    <errorDisplayField>PortfolioManagerCPU__c</errorDisplayField>
    <errorMessage>Please fill in new portfolio manager</errorMessage>
</ValidationRule>