cmss/main/default/objects/PortfolioManagementRequest__c/validationRules/ValidFromCurrentOrFutureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidFromCurrentOrFutureDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ValidFrom__c &lt;  NOW(),
$Profile.Name &lt;&gt; &quot;IntegrationUser&quot;
)</errorConditionFormula>
    <errorDisplayField>ValidFrom__c</errorDisplayField>
    <errorMessage>Portfolio Management Request cannot be in the past.</errorMessage>
</ValidationRule>