cmss/main/default/objects/PortfolioManagementRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PortfolioManagementType__c</columns>
    <columns>PortfolioManager__c</columns>
    <columns>PortfolioManChangeReason__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>RequestStatus__c</columns>
    <columns>PortfolioManChangeResult__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny požadavky</label>
</ListView>