cmss/main/default/objects/PortfolioManagementRequest__c/listViews/Chybne_Zpracovane_Pozadavky.listView-meta.xml
<ListView>
    <fullName>Chybne_Zpracovane_Pozadavky</fullName>
    <columns>Case__c</columns>
    <columns>CaseStatus__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PortfolioManagementType__c</columns>
    <columns>PortfolioManager__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequestStatus__c</columns>
    <columns>PortfolioManChangeResult__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RequestStatus__c</field>
        <operation>equals</operation>
        <value>2,6,7</value>
    </filters>
    <label>Chybně zpracované požadavky</label>
</ListView>