cmss/main/default/objects/PortfolioManagementRequest__c/listViews/Vsechny_pozadavky_za_minuly_mesic.listView-meta.xml
<ListView>
    <fullName>Vsechny_pozadavky_za_minuly_mesic</fullName>
    <columns>Case__c</columns>
    <columns>CaseStatus__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PortfolioManagementType__c</columns>
    <columns>PortfolioManager__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequestStatus__c</columns>
    <columns>PortfolioManChangeResult__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RequestStatus__c</field>
        <operation>equals</operation>
        <value>1,2,3,4,5,6,0,7</value>
    </filters>
    <label>Všechny požadavky (za minulý měsíc)</label>
</ListView>